--- a/weatherapp/src/app/app.scss
+++ b/weatherapp/src/app/app.scss
@@ -1,6 +1,24 @@
 
 
 .homePage{
-    background-color:#E86A48;
+    background-color:#97CCE8;
+
+}
+
+
+.settingsPage{
+    background-color:#97CCE8;
+}
+
+.aboutPage{
+    background-color:#97CCE8;
+}
+
+.contactPage{
+    background-color:#97CCE8;
+}
+
+.icon img {
+    width: 130px;    
     
 }
